# ansible-role-python-developer

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  Vagrantfile  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml
.github/workflows/: ci.yml  constraints.txt  release-drafter.yml  release.yml  tests.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  create.yml  molecule.yml
molecule/pycharm/: converge.yml  molecule.yml
molecule/pycharm-install/: converge.yml
molecule/vscode/: converge.yml
tasks/: custom_facts.yml  main.yml  pycharm.yml  vscode.yml
tests/: test.yml
vars/: main.yml
