[tool.poetry]
name = "ansible-role-python-developer"
version = "0.6.2"
description = "Ansible role to install Python developer tools."
authors = ["staticdev <staticdev-support@protonmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
